шаблон поделен на части

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,28 +1,8 @@
 {% load static %}
-  <head>
 
     <title>TopTim</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/favicons/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicons/favicon-32x32.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicons/favicon-16x16.png' %}">
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/favicons/favicon.ico' %}">
-    <link rel="manifest" href="{% static 'img/favicons/manifest.json' %}">
-    <meta name="msapplication-TileImage" content="{% static 'img/favicons/mstile-150x150.png' %}">
-    <meta name="theme-color" content="#ffffff">
-
-    <script src="{% static 'js/config.navbar-vertical.js' %}"></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
-    <link href="{% static 'lib/perfect-scrollbar/perfect-scrollbar.css' %}" rel="stylesheet">
-    <link href="{% static 'lib/datatables-bs4/dataTables.bootstrap4.min.css' %}" rel="stylesheet">
-    <link href="{% static 'lib/datatables.net-responsive-bs4/responsive.bootstrap4.css' %}" rel="stylesheet">
-    <link href="{% static 'lib/leaflet/leaflet.css' %}" rel="stylesheet">
-    <link href="{% static 'lib/leaflet.markercluster/MarkerCluster.css' %}" rel="stylesheet">
-    <link href="{% static 'lib/leaflet.markercluster/MarkerCluster.Default.css' %}" rel="stylesheet">
-    <link href="{% static 'css/theme.css' %}" rel="stylesheet">
-
-  </head>
-
+    {% include 'includes/head.html' %}
 
   <body>
 
@@ -30,234 +10,11 @@
 
 
       <div class="container" data-layout="container">
-        <nav class="navbar navbar-vertical navbar-expand-xl navbar-light">
-          <div class="d-flex align-items-center">
-            <div class="toggle-icon-wrapper">
-
-              <button class="btn navbar-toggler-humburger-icon navbar-vertical-toggle" data-toggle="tooltip" data-placement="left" title="Toggle Navigation"><span class="navbar-toggle-icon"><span class="toggle-line"></span></span></button>
-
-            </div><a class="navbar-brand" href="index.html">
-              <div class="d-flex align-items-center py-3"><img class="mr-2" src="assets/img/illustrations/falcon.png" alt="" width="40" /><span class="text-sans-serif">Toptim</span>
-              </div>
-            </a>
-          </div>
-          <div class="collapse navbar-collapse" id="navbarVerticalCollapse">
-            <div class="navbar-vertical-content perfect-scrollbar scrollbar">
-              <ul class="navbar-nav flex-column">
-                <li class="nav-item"><a class="nav-link" href="{% url 'company:home_page' %}">
-                  <div class="d-flex align-items-center"><span class="nav-link-icon"><span class="fas fa-home"></span></span><span class="nav-link-text">Главное</span>
-                  </div>
-                </a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'company:home_page' %}">
-                  <div class="d-flex align-items-center"><span class="nav-link-icon"><span class="fas fa-Settings"></span></span><span class="nav-link-text">Настройки</span>
-                  </div>
-                </a></li>
-                <li class="nav-item"><a class="nav-link" href="calendar.html">
-                    <div class="d-flex align-items-center"><span class="nav-link-icon"><span class="fas fa-calendar-alt"></span></span><span class="nav-link-text"> Calendar</span>
-                    </div>
-                  </a></li>
-                
-                <li class="nav-item"><a class="nav-link dropdown-indicator" href="#e-commerce" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="e-commerce">
-                    <div class="d-flex align-items-center"><span class="nav-link-icon"><span class="fas fa-cart-plus"></span></span><span class="nav-link-text">E commerce</span>
-                    </div>
-                  </a>
-                  <ul class="nav collapse" id="e-commerce" data-parent="#navbarVerticalCollapse">
-                    <li class="nav-item"><a class="nav-link" href="e-commerce/orders.html">Orders</a>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="e-commerce/customers.html">Customers</a>
-                    </li>
-                  </ul>
-                </li>
-              </ul>
-              
-            </div>
-          </div>
-        </nav>
+        {% include 'includes/header.html' %}
         <div class="content">
-          <nav class="navbar navbar-light navbar-glass navbar-top sticky-kit navbar-expand">
-
-            <button class="btn navbar-toggler-humburger-icon navbar-toggler mr-1 mr-sm-3" type="button" data-toggle="collapse" data-target="#navbarVerticalCollapse" aria-controls="navbarVerticalCollapse" aria-expanded="false" aria-label="Toggle Navigation"><span class="navbar-toggle-icon"><span class="toggle-line"></span></span></button>
-           
-            <ul class="navbar-nav align-items-center d-none d-lg-block">
-              <li class="nav-item">
-                <div class="search-box">
-                  <form class="position-relative" data-toggle="search" data-display="static">
-
-                    <input class="form-control search-input" type="search" placeholder="Поиск..." aria-label="Поиск" />
-                    <span class="fas fa-search search-box-icon"></span>
-
-                  </form>
-
-                  <button class="close" type="button" data-dismiss="search"><span class="fas fa-times"></span></button>
-                  <div class="dropdown-menu">
-                    <div class="scrollbar perfect-scrollbar py-3" style="height: 24rem;">
-                      <a class="dropdown-item px-card py-2" href="pages/profile.html">
-                        <div class="d-flex align-items-center">
-                          <div class="avatar avatar-l status-online mr-2">
-                            <img class="rounded-circle" src="{% static 'img/team/1.jpg' %}" alt="" />
-                          </div>
-                          <div class="flex-1">
-                            <h6 class="mb-0">Anna Karinina</h6>
-                            <p class="fs--2 mb-0">Technext Limited</p>
-                          </div>
-                        </div>
-                      </a>
-
-                    </div>
-                  </div>
-                </div>
-              </li>
-            </ul>
-            <ul class="navbar-nav navbar-nav-icons ml-auto flex-row align-items-center">
-             
-              <li class="nav-item dropdown dropdown-on-hover">
-                <a class="nav-link notification-indicator notification-indicator-primary px-0 icon-indicator" id="navbarDropdownNotification" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="fas fa-bell fs-4" data-fa-transform="shrink-6"></span></a>
-                <div class="dropdown-menu dropdown-menu-right dropdown-menu-card" aria-labelledby="navbarDropdownNotification">
-                  <div class="card card-notification shadow-none" style="max-width: 20rem">
-                    <div class="card-header">
-                      <div class="row justify-content-between align-items-center">
-                        <div class="col-auto">
-                          <h6 class="card-header-title mb-0">Notifications</h6>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="list-group list-group-flush font-weight-normal fs--1">
-                      <div class="list-group-item">
-                        <a class="notification notification-flush bg-200" href="#!">
-                          <div class="notification-avatar">
-                            <div class="avatar avatar-2xl mr-3">
-                              <img class="rounded-circle" src="{% static 'img/team/1-thumb.png' %}" alt="" />
-                            </div>
-                          </div>
-                          <div class="notification-body">
-                            <p class="mb-1"><strong>Emma Watson</strong> replied to your comment : "Hello world 😍"</p>
-                            <span class="notification-time"><span class="mr-1" role="img" aria-label="Emoji">💬</span>Just now</span>
-                          </div>
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-              </li>
-              <li class="nav-item dropdown dropdown-on-hover"><a class="nav-link pr-0" id="navbarDropdownUser" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <div class="avatar avatar-xl">
-                    <img class="rounded-circle" src="{% static 'img/team/3-thumb.png' %}" alt="" />
-                  </div>
-                </a>
-                <div class="dropdown-menu dropdown-menu-right py-0" aria-labelledby="navbarDropdownUser">
-                  <div class="bg-white rounded-soft py-2">
-                    <a class="dropdown-item" href="pages/profile.html">Profile &amp; account</a>
-                    <a class="dropdown-item" href="pages/settings.html">Settings</a>
-                    <a class="dropdown-item" href="authentication/basic/logout.html">Logout</a>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </nav>
-          <div class="card-deck">
-            <div class="card mb-3 overflow-hidden" style="min-width: 12rem">
-              <div class="bg-holder bg-card" style="background-image:url(assets/img/illustrations/corner-1.png);">
-              </div>
-
-              <div class="card-body position-relative">
-                <h6>Customers<span class="badge badge-soft-warning rounded-capsule ml-2">-0.23%</span></h6>
-                <div class="display-4 fs-4 mb-2 font-weight-normal text-sans-serif text-warning">58.39k</div><a class="font-weight-semi-bold fs--1 text-nowrap" href="#!">See all<span class="fas fa-angle-right ml-1" data-fa-transform="down-1"></span></a>
-              </div>
-            </div>
-            <div class="card mb-3 overflow-hidden" style="min-width: 12rem">
-              <div class="bg-holder bg-card" style="background-image:url(assets/img/illustrations/corner-2.png);">
-              </div>
-
-              <div class="card-body position-relative">
-                <h6>Orders<span class="badge badge-soft-info rounded-capsule ml-2">0.0%</span></h6>
-                <div class="display-4 fs-4 mb-2 font-weight-normal text-sans-serif text-info">73.46k</div><a class="font-weight-semi-bold fs--1 text-nowrap" href="#!">All orders<span class="fas fa-angle-right ml-1" data-fa-transform="down-1"></span></a>
-              </div>
-            </div>
-            <div class="card mb-3 overflow-hidden" style="min-width: 12rem">
-              <div class="bg-holder bg-card" style="background-image:url(assets/img/illustrations/corner-3.png);">
-              </div>
-
-              <div class="card-body position-relative">
-                <h6>Revenue<span class="badge badge-soft-success rounded-capsule ml-2">9.54%</span></h6>
-                <div class="display-4 fs-4 mb-2 font-weight-normal text-sans-serif" data-countup='{"count":43594,"format":"comma","prefix":"$"}'>0</div><a class="font-weight-semi-bold fs--1 text-nowrap" href="#!">Statistics<span class="fas fa-angle-right ml-1" data-fa-transform="down-1"></span></a>
-              </div>
-            </div>
-          </div>
-          <div class="card mb-3">
-            <div class="card-header">
-              <div class="row align-items-center justify-content-between">
-                <div class="col-6 col-sm-auto d-flex align-items-center pr-0">
-                  <h5 class="fs-0 mb-0 text-nowrap py-2 py-xl-0">Последние записи клиентов</h5>
-                </div>
-                <div class="col-6 col-sm-auto ml-auto text-right pl-0">
-                  <div class="d-none" id="purchases-actions">
-                    <div class="input-group input-group-sm">
-                      <select class="custom-select cus" aria-label="Bulk actions">
-                        <option selected="">Bulk actions</option>
-                        <option value="Refund">Refund</option>
-                        <option value="Delete">Delete</option>
-                        <option value="Archive">Archive</option>
-                      </select>
-                      <button class="btn btn-falcon-default btn-sm ml-2" type="button">Apply</button>
-                    </div>
-                  </div>
-                  <div id="dashboard-actions">
-                    <button class="btn btn-falcon-default btn-sm mx-2" type="button"><span class="fas fa-filter" data-fa-transform="shrink-3 down-2"></span><span class="d-none d-sm-inline-block ml-1"></span></button>
-                    <button class="btn btn-falcon-default btn-sm" type="button"><span class="fas fa-external-link-alt" data-fa-transform="shrink-3 down-2"></span><span class="d-none d-sm-inline-block ml-1"></span></button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card-body px-0 pt-0">
-              <div class="dashboard-data-table">
-                <table class="table table-sm table-dashboard fs--1 data-table border-bottom" data-options='{"responsive":false,"pagingType":"simple","lengthChange":false,"searching":false,"pageLength":8,"columnDefs":[{"targets":[0,6],"orderable":false}],"language":{"info":"_START_ to _END_ Items of _TOTAL_ — <a href=\"#!\" class=\"font-weight-semi-bold\"> view all <span class=\"fas fa-angle-right\" data-fa-transform=\"down-1\"></span> </a>"},"buttons":["copy","excel"]}'>
-                  <thead class="bg-200 text-900">
-                    <tr>
-                      <th class="no-sort pr-1 align-middle data-table-row-bulk-select">
-                        <div class="custom-control custom-checkbox">
-                          <input class="custom-control-input checkbox-bulk-select" id="checkbox-bulk-purchases-select" type="checkbox" data-checkbox-body="#purchases" data-checkbox-actions="#purchases-actions" data-checkbox-replaced-element="#dashboard-actions" />
-                          <label class="custom-control-label" for="checkbox-bulk-purchases-select"></label>
-                        </div>
-                      </th>
-                      <th class="sort pr-1 align-middle">ФИО</th>
-                      <th class="sort pr-1 align-middle">Телефон</th>
-                      <th class="sort pr-1 align-middle">Услуга</th>
-                      <th class="sort pr-1 align-middle text-center">Статус</th>
-                      <th class="sort pr-1 align-middle text-right">Цена</th>
-                      <th class="no-sort pr-1 align-middle data-table-row-action"></th>
-                    </tr>
-                  </thead>
-                  <tbody id="purchases">
-                    <tr class="btn-reveal-trigger">
-                      <td class="align-middle">
-                        <div class="custom-control custom-checkbox">
-                          <input class="custom-control-input checkbox-bulk-select-target" type="checkbox" id="checkbox-10" />
-                          <label class="custom-control-label" for="checkbox-10"></label>
-                        </div>
-                      </td>
-                      <th class="align-middle"><a href="pages/customer-details.html">Sylvia Plath</a></th>
-                      <td class="align-middle">plath@yahoo.com</td>
-                      <td class="align-middle">All-New Fire HD 8 Kids Edition Tablet</td>
-                      <td class="align-middle text-center fs-0"><span class="badge badge rounded-capsule badge-soft-warning">Pending<span class="ml-1 fas fa-stream" data-fa-transform="shrink-2"></span></span>
-                      </td>
-                      <td class="align-middle text-right">$199</td>
-                      <td class="align-middle white-space-nowrap">
-                        <div class="dropdown text-sans-serif">
-                          <button class="btn btn-link text-600 btn-sm dropdown-toggle btn-reveal mr-3" type="button" id="dropdown10" data-toggle="dropdown" data-boundary="html" aria-haspopup="true" aria-expanded="false"><span class="fas fa-ellipsis-h fs--1"></span></button>
-                          <div class="dropdown-menu dropdown-menu-right border py-0" aria-labelledby="dropdown10">
-                            <div class="bg-white py-2"><a class="dropdown-item" href="#!">View</a><a class="dropdown-item" href="#!">Edit</a><a class="dropdown-item" href="#!">Refund</a>
-                              <div class="dropdown-divider"></div><a class="dropdown-item text-warning" href="#!">Archive</a><a class="dropdown-item text-danger" href="#!">Delete</a>
-                            </div>
-                          </div>
-                        </div>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </div>
+          {% include 'includes/navbar.html' %}
+          {% include 'includes/card_stat.html' %}
+          {% include 'includes/card_client.html' %}
         </div>
       </div>
     </main>
