--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,19 @@
 {% load static %}
-
-    <title>TopTim</title>
+  
+  {% block title %}
+  <title>TopTim</title>
+    
+  {% endblock %}
+    
 
     {% include 'includes/head.html' %}
 
   <body>
-
+    
+    {% block body %}
+      
+      
     <main class="main" id="top">
-
 
       <div class="container" data-layout="container">
         {% include 'includes/header.html' %}
@@ -19,24 +25,7 @@
       </div>
     </main>
 
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/popper.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'lib/@fortawesome/all.min.js' %}"></script>
-    <script src="{% static 'lib/stickyfilljs/stickyfill.min.js' %}"></script>
-    <script src="{% static 'lib/sticky-kit/sticky-kit.min.js' %}"></script>
-    <script src="{% static 'lib/is_js/is.min.js' %}"></script>
-    <script src="{% static 'lib/lodash/lodash.min.js' %}"></script>
-    <script src="{% static 'lib/perfect-scrollbar/perfect-scrollbar.js' %}"></script>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700%7cPoppins:100,200,300,400,500,600,700,800,900&amp;display=swap" rel="stylesheet">
-    <script src="{% static 'lib/chart.js/Chart.min.js' %}"></script>
-    <script src="{% static 'lib/datatables/js/jquery.dataTables.min.js' %}"></script>
-    <script src="{% static 'lib/datatables-bs4/dataTables.bootstrap4.min.js' %}"></script>
-    <script src="{% static 'lib/datatables.net-responsive/dataTables.responsive.js' %}"></script>
-    <script src="{% static 'lib/datatables.net-responsive-bs4/responsive.bootstrap4.js' %}"></script>
-    <script src="{% static 'lib/leaflet/leaflet.js' %}"></script>
-    <script src="{% static 'lib/leaflet.markercluster/leaflet.markercluster.js' %}"></script>
-    <script src="{% static 'lib/leaflet.tilelayer.colorfilter/leaflet-tilelayer-colorfilter.min.js' %}"></script>
-    <script src="{% static 'js/theme.js' %}"></script>
+    {% include 'includes/scripts.html' %}
+    {% endblock %}
 
   </body>
