страница календаря готова

--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -10,3 +10,6 @@
 <link href="{% static 'lib/leaflet.markercluster/MarkerCluster.css' %}" rel="stylesheet">
 <link href="{% static 'lib/leaflet.markercluster/MarkerCluster.Default.css' %}" rel="stylesheet">
 <link href="{% static 'css/theme.css' %}" rel="stylesheet">
+<link href="{% static 'lib/prismjs/prism-okaidia.css' %}" rel="stylesheet">
+<link href="{% static 'lib/fullcalendar/main.min.css' %}" rel="stylesheet">
+<link href="{% static 'lib/flatpickr/flatpickr.min.css' %}" rel="stylesheet">
