--- a/templates/includes/scripts.html
+++ b/templates/includes/scripts.html
@@ -18,3 +18,8 @@
     <script src="{% static 'lib/leaflet.markercluster/leaflet.markercluster.js' %}"></script>
     <script src="{% static 'lib/leaflet.tilelayer.colorfilter/leaflet-tilelayer-colorfilter.min.js' %}"></script>
     <script src="{% static 'js/theme.js' %}"></script>
+    <script src="{% static 'lib/prismjs/prism.js' %}"></script>
+    <script src="{% static 'lib/fullcalendar/main.min.js' %}"></script>
+    <script src="{% static 'lib/flatpickr/flatpickr.min.js' %}"></script>
+    <script src="{% static 'lib/dayjs/dayjs.min.js' %}"></script>
+    <script src="{% static 'lib/jquery-validation/jquery.validate.min.js' %}"></script>
