--- a/templates/base.html
+++ b/templates/base.html
@@ -4,23 +4,25 @@
   <title>TopTim</title>
     
   {% endblock %}
-    
 
     {% include 'includes/head.html' %}
 
   <body>
-    
     {% block body %}
-      
       
     <main class="main" id="top">
 
       <div class="container" data-layout="container">
         {% include 'includes/header.html' %}
         <div class="content">
+          
           {% include 'includes/navbar.html' %}
+          {% block content %}
+            
           {% include 'includes/card_stat.html' %}
           {% include 'includes/card_client.html' %}
+          {% endblock %}
+            
         </div>
       </div>
     </main>
